Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13498

The "mark text changes" checkbox is not being respected

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • Qt Creator 3.3.0-rc1
    • Qt Creator 3.3.0-beta1
    • Editors
    • None
    • Xubuntu Linux 14.10
    • a3c9104e35789a0148d11889b898464d7403f047

      The mark text changes feature re-enables itself automatically. After disabling the feature under Tools > Options > Text Editor > Display, it remains in effect until the file, project or program is closed and reopened. Ticking and unticking the checkbox can sometimes deactivate the feature once more, but usually a toggling of another feature from the same category (e.g. visualize whitespace) is required for the former to register properly.

      I have not encountered this issue in QtCreator 3.2.2

        1. mark_text_changes.png
          30 kB
          Adrian Parker
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            adrian5 Adrian Parker
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes