Editor: Fix "Mark text changes" setting.

The revision markers are configured by the display
settings. There is no need to set them manually.

Task-number: QTCREATORBUG-13498
Change-Id: I99ee829d64dd23a7d24f13580a75c7c1666823f4
Reviewed-by: hjk <hjk121@nokiamail.com>