src/plugins/cppeditor/cppeditor.cpp
@@ -152,7 +152,6 @@ void CppEditorWidget::finalizeInitialization()
     d->m_cppEditorDocument = qobject_cast<CppEditorDocument *>(textDocument());
 
     setLanguageSettingsId(CppTools::Constants::CPP_SETTINGS_ID);
-    setRevisionsVisible(true);
 
     // function combo box sorting
     connect(CppEditorPlugin::instance(), &CppEditorPlugin::outlineSortingChanged,
