src/plugins/texteditor/texteditor.cpp
@@ -7215,7 +7215,6 @@ bool TextEditorWidget::isMissingSyntaxDefinition() const
 // The remnants of PlainTextEditor.
 void TextEditorWidget::setupAsPlainEditor()
 {
-    setRevisionsVisible(true);
     setMarksVisible(true);
     setLineSeparatorsAllowed(true);
 
